--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.ukwksk.contextualizeintellijplugin
+pluginGroup = co.ukwksk.contextualizeIntelliJPlugin
 pluginName = contextualize-intellij-plugin
 pluginRepositoryUrl = https://github.com/ukwksk/contextualize-intellij-plugin
 # SemVer format -> https://semver.org
