--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.ukwksk.contextualizeintellijplugin</id>
-    <name>contextualize-intellij-plugin</name>
+    <id>co.ukwksk.contextualizeIntelliJPlugin</id>
+    <name>Contextualize</name>
     <vendor>ukwksk</vendor>
 
     <depends>com.intellij.modules.platform</depends>
@@ -9,10 +9,6 @@
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.ukwksk.contextualizeintellijplugin.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <toolWindow factoryClass="co.ukwksk.contextualizeIntelliJPlugin.toolWindow.ToolWindowFactory" id="Contextualize"/>
     </extensions>
-
-    <applicationListeners>
-        <listener class="com.github.ukwksk.contextualizeintellijplugin.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
-    </applicationListeners>
 </idea-plugin>
